    Report by Jean-Marc Lessard, fix by PAscal Lemoy.
  - Fix memory leaks during ANALYZE
    This caused out of memory errors when large tables were analyzed.
    Report by Alessio Checcucci.
  - IMPORT FOREIGN SCHEMA should not tolerate missing remote schema
    It used to cause a warning, but the SQL standard requires an error.
    Report by Jean-Marc Lessard.

Version 1.4.0, released 2016-04-08
  Enhancements:
  - Add option "readonly" for IMPORT FOREIGN TABLE that sets the foreign table
    option "readonly" to "true" on all imported foreign tables.
    Idea by Julien Goux.
  - Allow foreign tables based on arbitrary Oracle queries.
    The query, enclosed in parentheses, can be supplied as option "table".
    Requested by "tsykes", "cirix81" and Julien Goux.

  Bugfixes:
  - Selecting timestamps with lc_messages other than English caused errors like
    "ORA-01406: la valeur de la colonne extraite a été tronquée"
    Report by Damien Szczyt.
  - Complicated queries could lead to an error like
    "Internal oracle_fdw error: encountered unknown node type 524."
    Report by "bartonjd".
  - PostGIS type "geometry" cannot be found if ArcGIS is installed.
    Report by "dtoller".

Version 1.3.0, released 2015-12-21
  Enhancements:
  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
  - Improve cost estimates by using the row count estimate.
    Inspiration by Daniele Sevegnani.
  - Support two-dimensional geometries with an additional measure dimension.
    Idea by Paul Dziemiela.
  - Throw an error if oracle_close_connections() is called inside a
    transaction that modified Oracle data.

  Bugfixes:
  - The server crashed for the constructs like "<column> = ANY (NULL)".
    Report and patch by dreckard.
  - oracle_fdw sometimes failed to recognize the SDO_GEOMETRY data type.
    Per report from Bevan Jenkins.
  - Some point geometries were not translated properly.
    Per report from Bevan Jenkins.